deployment/k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mra
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      namespace: mra
      name: keycloak
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.1
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--import-realm"]
          ports:
            - name: http
              containerPort: 38218
            - name: management
              containerPort: 38217
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            failureThreshold: 5
            httpGet:
              path: /health/live
              port: 38217
          readinessProbe:
            periodSeconds: 5
            initialDelaySeconds: 90
            failureThreshold: 5
            httpGet:
              path: /health/ready
              port: 38217
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: keycloak
      volumes:
        - name: keycloak
          configMap:
            name: keycloak
