deployment/k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mra
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 38218
  type: ClusterIP
